// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser.getOutOfScopeLocations should exclude function for locations on declaration 1`] = `
"(3, 14) -> (23, 1)
(25, 16) -> (29, 1)
(31, 20) -> (33, 1)
(35, 26) -> (37, 1)
(39, 20) -> (41, 1)
(43, 31) -> (45, 1)"
`;

exports[`Parser.getOutOfScopeLocations should exclude non-enclosing function blocks 1`] = `
"(8, 16) -> (10, 3)
(12, 22) -> (14, 3)
(16, 16) -> (18, 3)
(20, 27) -> (22, 3)
(25, 16) -> (29, 1)
(31, 20) -> (33, 1)
(35, 26) -> (37, 1)
(39, 20) -> (41, 1)
(43, 31) -> (45, 1)"
`;

exports[`Parser.getOutOfScopeLocations should roll up function blocks 1`] = `
"(3, 14) -> (23, 1)
(25, 16) -> (29, 1)
(31, 20) -> (33, 1)
(35, 26) -> (37, 1)
(39, 20) -> (41, 1)
(43, 31) -> (45, 1)"
`;
